[package]
name = "rustpush"
version = "0.1.0"
edition = "2021"
default-run = "rustpush-test"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
plist = "1.5.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls", "gzip", "stream"] }
serde = { version = "1.0", features = ["derive"] }
openssl = { version = "0.10.56", features = ["vendored"] }
uuid = { version = "1.4.1", features = ["v4"] }
base64 = "0.21.2"
regex = "1.9.3"
tokio-rustls = "0.24.1"
rustls = "0.21.6"
rustls-pemfile = "1.0.3"
rand = "0.8.5"
libflate = "2.0.0"
thiserror = "1.0.47"
async-recursion = "1.0.4"
html-escape = "0.2.13"
xml-rs = "0.8.17"
prost = "0.12.0"
log = "0.4.20"
pretty_env_logger = "0.5.0"
async-trait = "0.1.73"
flume = "0.11.0"
open-abinsthe = { path = "/home/tae/Documents/open-abinsthe", optional = true, features = ["serde"] }

[features]
default = ["macOS"]
macOS = ["dep:open-abinsthe"]


[build-dependencies]
prost-build = { version = "0.12.0" }

[[bin]]
name = "rustpush-test"
path = "src/test.rs"

[lib]
name = "rustpush"
path = "src/lib.rs"
